# center_of_mass_spiral

./: .gitignore  CHANGELOG.md  README.md  app.py  app_nonuniform.py  discrete_shape.py  draw_com_spiral.py  operations.py  plotter.py  poly_segment.py  polysegment.py  primitives.py  pyproject.toml  radius_analysis.py  segment.py  shapes.py  test_polysegment.py  test_primitives.py  vertex_list.py
.github/workflows/: ci.yml
examples/: archimedean.py  basic_shapes.py  nonuniform_density.py
src/center_of_mass_spiral/: __init__.py  operations.py  plotter.py  poly_segment.py  shapes.py
tests/: __init__.py  test_polysegment.py
